# einop

./: README.md  pyproject.toml
.github/workflows/: publish-package.yml  run-tests.yml
einop/: __init__.py
scripts/: update_version.py
tests/: test_einop.py
